--- a/blog/读书笔记/重构.md
+++ b/blog/读书笔记/重构.md
@@ -1,5 +1,68 @@
 
-# 第10章 简化函数调用
+- [ ] 第九章
+    - [ ] 9.6 以多态取代条件表达式
+    - [x] 9.7 引入空对象
+    - [x] 9.8 断言
+
+## 第九章 简化条件表达式
+  > 单一出口原则: 一个函数一个出口
+  
+9.1 分解条件表达式
+  > 复杂的条件表达式是糟糕的! 它让函数变大, 可读性变差, 容易出错!!!
+  
+  > 把"分支条件"分解成"新函数"
+  > 1. 突出条件逻辑
+  > 2. 突出分支的逻辑
+ 
+```java
+  if("man".equals(type)||"woman".equals(yupe)){
+     doSomething();
+  }
+  //改为:
+  if(isHuman(type)){
+      doSomething();
+  }
+ ```
+ 
+9.2 合并条件表达式
+  > 如果有一串检查: 检查条件各不相同, 但是最终行为却是一致的, 这个时候考虑合并条件表达式
+  
+9.3 合并重复的片段
+
+---
+9.6 以多态取代条件表达式
+  > 多态的好处: 如果你需要根据对象的不同类型而采取不同的行为, 多态使你不必编写明显的条件表达式
+  > 两种实现方法: 继承和state/strategy模式
+  > 1. 继承  
+        简单,容易实现, 首选  
+    2. state/strategy  
+        如果需要在创建好对象之后修改对象类型, 或者要重构的类已经有子类, 那么只能用state/strategy模式 
+---
+9.7 引入空对象
+  > 1. 创建空对象(继承已有对象类)
+  > 2. 将任何 return null 改为 return NullObject
+  > 3. 任何 xx == null 判断改为 xx.isNull
+  
+
+---
+9.8 引入断言
+  > Assert类
+
+  > 只有某个条件为真时, 该段代码才能正常运行!
+  > 不要滥用断言, 只将其用于"一定必须为真"的条件, 而不是"你认为应该为真"的条件.
+  
+断言的价值:
+  > 帮助程序员理解代码正确运行的必要条件  
+
+个人理解:
+  > 测试代码中用的多,普通代码中较少用
+
+---
+
+## 第10章 简化函数调用
 
 > 目的: 使接口变得更简洁易用 
 
+函数参数个数过多
+> 1. 如果某个参数在函数内部可以获得, 就不用传递了: replace parameter with method
+> 2. 
